# articulation

./: LICENSE  README.md  rosdep.yaml  stack.xml
articulation_models/: CMakeLists.txt  cmake_install.cmake  mainpage.dox  manifest.xml
articulation_models/data/: door.txt  drawer.txt
articulation_models/include/articulation_models/: utils.h
articulation_models/include/articulation_models/models/: generic_model.h  pca_gp_model.h  prismatic_model.h  rigid_model.h  rotational_model.h
articulation_models/scripts/: file_publisher.py  learn_prior.py  simple_publisher.py  simple_publisher_atonce.py
articulation_models/src/: model_learner_msg.cpp  model_learner_prior.cpp  model_learner_srv.cpp  utils.cpp
articulation_models/src/articulation_models/: track_utils.py
articulation_models/src/models/: factory.cpp  generic_model.cpp  pca_gp_model.cpp  prismatic_model.cpp  rigid_model.cpp  rotational_model.cpp
articulation_msgs/: mainpage.dox  manifest.xml
articulation_msgs/msg/: ArticulatedObjectMsg.msg  ModelMsg.msg  ParamMsg.msg  TrackMsg.msg
articulation_msgs/srv/: AlignModelSrv.srv  ArticulatedObjectSrv.srv  GetModelPriorSrv.srv  SetModelPriorSrv.srv  TrackModelSrv.srv
articulation_perception/: CMakeLists.txt  mainpage.dox  manifest.xml
articulation_perception/launch/: kinect_demo.launch  kinect_demo.vcg
articulation_perception/src/: detector.cpp  filewriter.cpp  stub.cpp
articulation_rviz_plugin/: CMakeLists.txt  mainpage.dox  manifest.xml  run_make
articulation_rviz_plugin/lib/: rviz_plugin.yaml
articulation_rviz_plugin/scripts/: track_visualizer.py
articulation_rviz_plugin/src/: articulation_display.cpp  articulation_display.h  articulation_model_display.cpp  articulation_model_display.h  camera_display_save.cpp  camera_display_save.h  init.cpp  minimal_display.cpp  minimal_display.h  utils.cpp  utils.h
articulation_structure/: CMakeLists.txt  mainpage.dox  manifest.xml
articulation_structure/msg/: PoseStampedIdMsg.msg
articulation_structure/nodes/: articulation_cartcollector.py  articulation_collector.py  articulation_eval.py  articulation_eval2.py  articulation_eval_full.py  pose_assembler.py  process_bags.py  process_markers.py  process_robotbag.py  process_robotbag_single.py  process_stamps.py  process_structure.py  process_videobag.py  test_eval.py  track_assembler.py
articulation_structure/src/: ArticulatedObject.cpp  ArticulatedObject.h  graph_learner.cpp  graph_learner.h  hogman_wrapper.cpp  hogman_wrapper.h  predict_pose.cpp  predict_pose.h  structs.cpp  structs.h  structure_learner_base.cpp  structure_learner_base.h  structure_learner_srv.cpp  structure_learner_st.cpp  structure_learner_st.h  utils.cpp  utils.h
articulation_tutorials/: CMakeLists.txt  mainpage.dox  manifest.xml
articulation_tutorials/cpp_model_fitting/: display_grid_axes_model.vcg  model_fitting.launch  model_fitting_demo.cpp
articulation_tutorials/demo_fitting/: .build_version  fit_models.vcg  icp_align.vcg  mainpage.dox  prior_clusters_advait.vcg  prior_clusters_advait_likelihood.vcg  prior_clusters_cosine.vcg  prior_clusters_kitchen.vcg  visualize_tracks.vcg
articulation_tutorials/getting_started/: README  getting_started.launch  trajectory_and_model.vcg
articulation_tutorials/python_service_client/: display_grid_axes_model.vcg  model_selection.launch  model_selection_client.py
articulation_tutorials/webcam_demo/: webcam_demo-1cm-4x6-4x5-colorrado.launch  webcam_demo-1cm-4x6-4x5-jurgo.launch  webcam_demo-1cm-4x6-4x5-video1.launch  webcam_demo-1cm-4x6-4x5.launch  webcam_demo-1cm-5x6-4x5.launch  webcam_demo-1cm-8x6-9x6-7x6-9x7.launch  webcam_demo-1cm-8x6-9x6-7x6.launch  webcam_demo-1cm-8x6-9x6.launch  webcam_demo.vcg  webcam_demo_logitec-c500-1280x1024px-2cm-4x5-5x6.launch
icp/: CMakeLists.txt  create_eclipse_project  mainpage.dox  manifest.xml  run_make
icp/src/: icpCpp.cpp  icp_align.cpp  icp_test.py  icp_utils.cpp  (+2 more)
(+97 files in other folders)
